--- a/css/main.css
+++ b/css/main.css
@@ -453,13 +453,31 @@ template {
   height: 200px;
   margin: 0 auto;
   padding: 10px; /* Angabe im Plugin als Innenabstand */
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  -o-flex-direction: row;
+  flex-direction: row;
+  margin: 0 -10px;
 }
 
-.inner {
-  height: 100%;
+
+.box {
+  padding: 10px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  width: 100%;
-  border: 1px solid blue;
+  border: 1px solid black;
+  height: 100%;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  -o-flex: 1;
+  flex: 1;
+  margin: 0 10px;
 }
